// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepNumber is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStepNumber testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiStepNumber props has titleSize is rendered 1`] = `
<div
  class="euiStepNumber"
>
  1
</div>
`;

exports[`EuiStepNumber props isHollow is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber-isHollow"
/>
`;

exports[`EuiStepNumber props status complete is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--complete"
>
  <div
    aria-label="complete"
    class="euiStepNumber__icon"
    data-euiicon-type="check"
  />
</div>
`;

exports[`EuiStepNumber props status danger is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--danger"
>
  <div
    aria-label="has errors"
    class="euiStepNumber__icon"
    data-euiicon-type="cross"
  />
</div>
`;

exports[`EuiStepNumber props status disabled is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--disabled"
>
  1
</div>
`;

exports[`EuiStepNumber props status incomplete is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--incomplete"
>
  1
</div>
`;

exports[`EuiStepNumber props status warning is rendered 1`] = `
<div
  class="euiStepNumber euiStepNumber--warning"
>
  <div
    aria-label="has warnings"
    class="euiStepNumber__icon"
    data-euiicon-type="alert"
  />
</div>
`;
